bugfix for Basic auth Base64 encoding